Added consent banner

--- a/Code/PerceptronFrontEnd/src/index.html
+++ b/Code/PerceptronFrontEnd/src/index.html
@@ -12,6 +12,9 @@
   <link media="all" type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation-flex.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
   
+  <!-- Start cookieyes banner -->   <!-- Updated 20210422 -->
+  <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/04743454166f0bc991355417.js"></script>
+  <!-- End cookieyes banner --> 
   <!-- <script src="https://code.angularjs.org/2.0.0-beta.0/http.dev.js"></script>    -->
   <!-- <script src="node_modules/chart.js/src/chart.js"></script> -->
 </head>
